Add target to generate doxygen documentation
Fix https://github.com/robotology/how-to-export-cpp-library/issues/21

--- a/doc/main.dox
+++ b/doc/main.dox
@@ -1,6 +1,6 @@
 /**
  *
- * \author Name Surname <name.surname@example.org>
+ * \mainpage Main page
  *
  * \copyright specify license (e.g. for open source code this can be: Released under the terms of the GNU GPL v2.0.)
  *
